Update dependencies and config to run with sb 3.6 and J21